Fixed nav re-focusability after header/nav collapsing

--- a/js/_head.scss
+++ b/js/_head.scss
@@ -41,11 +41,6 @@ header {
     font-weight: normal;
     text-shadow: 0 0 0.5em white;
   }
-  .collapsed {
-    nav {
-      position: fixed;
-    }
-  }
 }
 
 h2 {
